# servertech-chat

./: .clang-format  .dockerignore  .gitignore  00-main.html  00-project.html  01-architecture.html  02-local-dev.html  03-fork-modify-deploy.html  CMakeLists.txt  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  index.html  main.html
.github/workflows/: build.yml  doc.yml
client/: .env.development  .env.local  .eslintrc.json  .gitignore  jest-global-setup.js  jest.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/__mocks__/@formkit/: auto-animate.ts
client/__mocks__/next/: router.ts
client/__tests__/components/: EmailInput.tsx  FormCard.tsx  Header.tsx  Message.tsx  MessageInputBar.tsx  NameAvatar.tsx  PasswordInput.tsx  RoomEntry.tsx  UsernameInput.tsx
client/__tests__/components/__snapshots__/: EmailInput.tsx.snap  FormCard.tsx.snap  Header.tsx.snap  Message.tsx.snap  MessageInputBar.tsx.snap  NameAvatar.tsx.snap  PasswordInput.tsx.snap  RoomEntry.tsx.snap  UsernameInput.tsx.snap
client/__tests__/lib/: api.ts
client/__tests__/pages/: chat.tsx  index.tsx  login.tsx
client/__tests__/pages/__snapshots__/: chat.tsx.snap  index.tsx.snap  login.tsx.snap
client/components/: EmailInput.tsx  FormCard.tsx  Head.tsx  Header.tsx  Message.tsx  MessageInputBar.tsx  NameAvatar.tsx  PasswordInput.tsx  RoomEntry.tsx  UsernameInput.tsx  header.module.css  header.tsx
client/hooks/: useIsSmallScreen.ts  useLoading.ts
client/hooks/__mocks__/: useIsSmallScreen.ts
client/lib/: api.ts  apiSerialization.ts  apiTypes.ts  hasAuth.ts  user.ts  user.tsx
client/pages/: _app.js  chat.js  chat.tsx  index.js  index.tsx  login.tsx
client/styles/: Home.module.css  globals.css
doc/: 01-architecture.adoc  02-local-dev.adoc  03-fork-modify-deploy.adoc  index.adoc  install-boost.sh
server/: CMakeLists.txt
server/bench/: CMakeLists.txt  bench.cpp
server/include/: api.hpp  api_serialization.hpp  application.hpp  async_mutex.hpp  business.hpp  business_types.hpp  business_types_metadata.hpp  error.hpp  http_session.hpp  listener.hpp  pch.hpp  promise.hpp  redis_client.hpp  redis_fwd.hpp  redis_serialization.hpp  request_context.hpp  serialization.hpp  serve_static_file.hpp  server.hpp  session_map.hpp  shared_state.hpp  static_files.hpp  timestamp.hpp  use_nothrow_op.hpp  websocket.hpp  websocket_session.hpp
server/include/api/: api_types.hpp  auth.hpp  chat_websocket.hpp
server/include/services/: connection_pool.hpp  cookie_auth_service.hpp  mysql_client.hpp  mysql_connection_pool.hpp  pubsub_service.hpp  redis_client.hpp  redis_serialization.hpp  room_history_service.hpp  session_store.hpp
server/include/util/: async_mutex.hpp  base64.hpp  cookie.hpp  email.hpp  password_hash.hpp  scrypt.hpp  websocket.hpp
server/src/: api_serialization.cpp  application.cpp  boost_beast.cpp  boost_redis.cpp  error.cpp  http_session.cpp  listener.cpp  main.cpp  redis_client.cpp  redis_serialization.cpp  request_context.cpp  serialization.cpp  serve_static_file.cpp  server.cpp  shared_state.cpp  static_files.cpp  websocket.cpp  websocket_session.cpp
server/src/api/: api_types.cpp  auth.cpp  chat_websocket.cpp
server/src/separate-compilation/: boost_asio.cpp  boost_beast.cpp  boost_mysql.cpp  boost_redis.cpp
server/src/services/: connection_pool.cpp  cookie_auth_service.cpp  mysql_client.cpp  mysql_connection_pool.cpp  pubsub_service.cpp  redis_client.cpp  redis_serialization.cpp  room_history_service.cpp  session_store.cpp
server/src/util/: base64.cpp  cookie.cpp  email.cpp  password_hash.cpp  scrypt.cpp  websocket.cpp
server/test/: CMakeLists.txt  api_serialization.cpp  async_mutex.cpp  entry_point.cpp  redis_serialization.cpp  session_map.cpp
server/test/api/: api_types.cpp
server/test/integration/: CMakeLists.txt  client.cpp  client.hpp  entry_point.cpp  models.py  requirements.in  requirements.txt  test_websocket.py  websocket.cpp
server/test/integration-python/: main.py  requirements.txt
server/test/services/: pubsub_service.cpp  redis_serialization.cpp
server/test/util/: async_mutex.cpp  base64.cpp  cookie.cpp  email.cpp  password_hash.cpp  scrypt.cpp
server/tools/: db_setup.sql
src/: beast.hpp  boost_asio.cpp  boost_beast.cpp  boost_redis.cpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  main.cpp  net.hpp  pch.hpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp  websocket_session.hpp
src/server/: error.cpp  error.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  main.cpp  redis_client.cpp  redis_client.hpp  serialization.cpp  serialization.hpp  shared_state.cpp  shared_state.hpp  websocket.cpp  websocket.hpp  websocket_session.cpp  websocket_session.hpp
static/: index.html
test/integration/: __init__.py  api_types.py  conftest.py  models.py  requirements.in  requirements.txt  test_api_errors.py  test_create_account.py  test_login.py  test_websocket.py
tools/: aws-stack.yml  deploy.sh  ecs-task-def.json  file_headers.py  install-boost.sh  pch.sh
